@@ -39,7 +39,7 @@ sudo udevadm trigger
 ### Usage
 To use this project, please run a Java command.
 ```shell
-$ java -jar AlienFX.jar <options>
+$ java --enable-native-access=ALL-UNNAMED -jar AlienFX.jar <options>
 ```
 
 Make sure to replace "AlienFX.jar" with the actual name of the jar file.
@@ -50,12 +50,12 @@ The list of available options is below.
 #### List Possible Options
 You can view all available options using the help command.
 ```shell
-java -jar AlienFX.jar --help
+java --enable-native-access=ALL-UNNAMED -jar AlienFX.jar --help
 ```
 
 #### Set keyboard lights to blue
 This will set the entire keyboard to full blue `RGB(0, 0, F)`
 
 ```shell
-java -jar AlienFX.jar --set-color --zone KEYBOARD_ALL --color 0,0,F
+java --enable-native-access=ALL-UNNAMED -jar AlienFX.jar --set-color --zone KEYBOARD_ALL --color 0,0,F
 ```
